--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <div id="carousel" class="carousel">
     <div class="slides">
-      <div class="slide active" style="background-image: url(assets/image/car1.png)">1</div>
-      <div class="slide" style="background-image: url(assets/image/car2.jpg)">2</div>
-      <div class="slide" style="background-image: url(assets/image/car3.jpg)">3</div>
-      <div class="slide" style="background-image: url(assets/image/car4.jpg)">4</div>
-      <div class="slide" style="background-image: url(assets/image/car5.jpg)">5</div>
+      <div class="slide active" style="background-image: url(assets/image/car1.png)"></div>
+      <div class="slide" style="background-image: url(assets/image/car2.jpg)"></div>
+      <div class="slide" style="background-image: url(assets/image/car3.jpg)"></div>
+      <div class="slide" style="background-image: url(assets/image/car4.jpg)"></div>
+      <div class="slide" style="background-image: url(assets/image/car5.jpg)"></div>
     </div>
   </div>
 
